--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,35 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no,viewport-fit=cover">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <% if (process.env.NODE_ENV === 'production' ) { %>
+      <!-- 引入样式 -->  
+      <% for(var css of htmlWebpackPlugin.options.cdn.css) { %>  
+      <link rel="stylesheet" href="<%=css%>">  
+      <% } %>  
+      <!-- 引入JS -->  
+      <% for(var js of htmlWebpackPlugin.options.cdn.js) { %>  
+      <script src="<%=js%>"></script>  
+    <% } %><% } %>   
+    <style>
+      html {
+        touch-action: manipulation;
+      }
+
+      body{
+        /* iphone虚拟指示条 安全区 */
+        padding-bottom: constant(safe-area-inset-bottom);
+        padding-bottom: env(safe-area-inset-bottom);
+      }
+    </style>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <!-- built files will be auto injected -->  
   </body>
 </html>
